--- a/angularFE/src/app/app.component.html
+++ b/angularFE/src/app/app.component.html
@@ -9,13 +9,22 @@
 </head>
 <body class="d-flex flex-column wrapper">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="active-link">
-    <i class="fas fa-cogs"></i>
-    {{ subtitle }}
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--  <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="active-link">-->
+<!--    <i class="fas fa-cogs">{{ subtitle }}</i>-->
+  <!-- Se questo è il template di app.component.html -->
+  <div class="navbar-brand navbar-brand-custom">
+    <a (click)="navigateToHome()" class="custom-link">
+      <i class="fas fa-cogs"></i> {{ subtitle }}
+    </a>
+  </div>
+
+
+
+
+<!--  </a>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
   <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
